<resources>
    <string name="app_name">Shoppinglists</string>
    <string name="new_Shoppinglist">New Shoppinglist</string>
    <string name="cd_new_Shoppinglist">Creates new Shoppinglist</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_Articles">Articles</string>
    <string name="action_Save">Save</string>
    <string name="hint_ArticleName">Article Name</string>
    <string name="hint_Manufacturer">Manufacturer</string>
    <string name="hint_Merchant">Merchant</string>
    <string name="hint_Cost">Cost</string>
    <string name="hint_SearchArticles">Search Articles</string>
    <string name="action_EditArticles">Edit Articles</string>
    <string name="action_NewArticle">New Article</string>
    <string name="cd_new_article">Creates a new Article</string>
    <string name="error_NewArticle_EmptyName">Please add a name to the article</string>
    <string name="title_NewArticle">New Article</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="hint_newShoppinglist">Name</string>
    <string name="Action_AddArticle">Add Article</string>
    <string name="title_SelectArticle">Select Article</string>
    <string name="hint_ArticleAmount">Amount</string>
    <string name="title_ArticleAmount">Article Amount</string>
</resources>
